--- a/local/aws_setup/Dockerfile
+++ b/local/aws_setup/Dockerfile
@@ -1,11 +1,8 @@
-FROM python:alpine
-
-ARG CLI_VERSION=1.16.86
-
-RUN apk -uv add --no-cache groff jq less bash && \
-    pip install --no-cache-dir awscli==$CLI_VERSION
+FROM amazon/aws-cli
 
 WORKDIR /aws
+
+RUN yum install -y wget
 
 ENV WAITFORIT_VERSION="v2.4.1"
 RUN wget -q -O /usr/local/bin/waitforit https://github.com/maxcnunes/waitforit/releases/download/$WAITFORIT_VERSION/waitforit-linux_amd64 \
