Order event implementation

--- a/aws-sqs-processing/build.gradle
+++ b/aws-sqs-processing/build.gradle
@@ -2,4 +2,6 @@ dependencies {
   implementation project(':aws-support')
   implementation libraries.slf4jApi
   implementation libraries.springBootStarterIntegration
+
+  annotationProcessor libraries.springBootConfigurationProcessor
 }
