--- a/aws-support/build.gradle
+++ b/aws-support/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'java-library'
 
 dependencies {
+  api libraries.awsSdkSns
   api libraries.awsSdkSqs
   implementation libraries.springBootStarterIntegration
 
