--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ include 'api-model'
 include 'aws-support'
 include 'aws-sqs-processing'
 include 'core'
+include 'events'
 include 'integration-test'
 include 'internal-model'
 include 'worker'
