--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -2,8 +2,11 @@ dependencies {
   implementation project(':aws-support')
   implementation project(':aws-sqs-processing')
   implementation project(':core')
+  implementation project(':events')
   implementation project(':internal-model')
   implementation libraries.camelSpringBootStarter
   implementation libraries.camelSpringBootAwsSqsStarter
   implementation libraries.camelSpringBootJacksonStarter
+
+  annotationProcessor libraries.springBootConfigurationProcessor
 }
